# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.526 2006/01/25 16:07:35 rocket Exp $

  25 Jan 2006; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, targets/support/bootloader-setup.sh:
  Fix bug if no kernel packages were defined but there was a postconf setting.
  x86 softlevel support is enhanced.

  24 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst,
  targets/support/bootloader-setup.sh:
  Added IA64 patch from plasmaroo.  This is catalyst 2.0_rc21.

  23 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> arch/x86.py:
  Changed mcpu to mtune since mcpu is deprecated on GCC 3.4 and above.

  20 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is 2.0_rc20.

  20 Jan 2006; Eric Edgar <rocket@gentoo.org> modules/netboot2_target.py:
  Netboot2 fixes for spec parameter checks

  20 Jan 2006; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py, modules/stage4_target.py:
  add makeopts spec file support.

  20 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/generic_stage_target.py:
  Added fix for bug #119635.

  19 Jan 2006; Eric Edgar <rocket@gentoo.org> targets/support/pre-kmerge.sh:
  Fix pre-kmerge.sh for stage4

  18 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is 2.0_rc19.

  18 Jan 2006; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  fix crash when no kernel is defined.  spacing issue

  18 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is 2.0_rc18.

  18 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  modules/livecd_stage2_target.py:
  Added livecd/volid to valid_values.

  17 Jan 2006; Eric Edgar <rocket@gentoo.org>
  modules/generic_stage_target.py:
  remove extra function that was converting strings to lists unnecessarily

  17 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org> catalyst:
  This is catalyst 2.0_rc17.
