@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/targets/stage3/Attic/stage3-chroot.sh,v 1.26 2005/12/19 15:28:42 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/targets/stage3/Attic/stage3-chroot.sh,v 1.27 2006/01/26 15:35:41 wolf31o2 Exp $
 
 . /tmp/chroot-functions.sh
 
@@ -21,3 +21,5 @@ export USE="${USE} ${clst_HOSTUSE}"
 setup_portage
 
 run_emerge "-e system"
+rm -f /var/lib/portage/world
+touch /var/lib/portage/world
