@@ -1,5 +1,10 @@
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.526 2006/01/25 16:07:35 rocket Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/Attic/ChangeLog,v 1.527 2006/01/26 15:35:41 wolf31o2 Exp $
+
+  26 Jan 2006; Chris Gianelloni <wolf31o2@gentoo.org>
+  targets/stage1/stage1-chroot.sh, targets/stage3/stage3-chroot.sh:
+  Added --oneshot to default options for stage1 building. Added code to wipe
+  world during stages 1 and 3. This is catalyst 2.0_rc22.
 
   25 Jan 2006; Eric Edgar <rocket@gentoo.org>
   modules/generic_stage_target.py, targets/support/bootloader-setup.sh:
